# mtpscript1

./: .gitignore  AGENT.md  BUGFIX.md  Cargo.toml  Dockerfile  FINALFIX.md  INSTALL.md  LICENSE  Makefile  NEWISSUE.md  RANDOMTEST.md  README.md  TASK.md  build-info.json  ci.yml.txt  gas-v5.1.csv  gas_costs.h  install.sh  mqjs_stdlib.h  oldnotes.txt  openapi-rules-v5.1.json  run_tests.sh
mtpscript-core/: Cargo.toml  test_codegen.rs
mtpscript-core/benches/: crypto_benchmarks.rs
mtpscript-core/fuzz/: fuzz_json_parser.rs
mtpscript-core/src/: lib.rs
mtpscript-core/src/api/: handler.rs  mod.rs  openapi.rs  router.rs
mtpscript-core/src/audit/: logger.rs  trace.rs
mtpscript-core/src/compiler/: codegen.rs  deterministic.rs  effects.rs  mod.rs  pattern.rs  respond.rs
mtpscript-core/src/effects/: async_effect.rs  builtins.rs  checker.rs  mod.rs
mtpscript-core/src/errors/: compile.rs  mod.rs  runtime.rs
mtpscript-core/src/gas/: costs.rs  counter.rs  mod.rs
mtpscript-core/src/ir/: lower.rs  mod.rs  nodes.rs  tail_call.rs
mtpscript-core/src/json/: cbor.rs  equality.rs  hash.rs  mod.rs  parse.rs  serialize.rs
mtpscript-core/src/lambda/: adapter.rs  mod.rs  runtime.rs
mtpscript-core/src/lexer/: mod.rs  scanner.rs  token.rs
mtpscript-core/src/modules/: import.rs  mod.rs  npm_bridge.rs  (+1 more)
mtpscript-core/tests/: builtins_tests.rs  compiler_tests.rs  determinism.rs  effect_tests.rs  gas_tests.rs  ir_tests.rs  js_execution_tests.rs  json_parse_tests.rs  json_type_tests.rs  lexer_tests.rs  parser_tests.rs  runtime_tests.rs  trace_tests.rs  typecheck_tests.rs
(+352 files in other folders)
