[package]
name = "mtpscript-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
rustc_version = "0.4"
base64 = "0.21"
crc32fast = "1.3"
ring = "0.16"
reqwest = { version = "0.11", features = ["blocking", "json"] }
libc = "0.2"
sha256 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"