[package]
name = "mtpscript-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
rustc_version = "0.4"
base64 = "0.21"
crc32fast = "1.3"
ring = "0.16"
reqwest = { version = "0.11", features = ["blocking", "json"] }
git2 = "0.18"
sequoia-openpgp = "1.16"
libc = "0.2"
sha256 = "1.0"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
clap = "4.0"
arbitrary = { version = "1.3", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
libfuzzer-sys = "0.4"
proptest = "1.0"